passwords: don't eat space KeyPressed on Mac

On Mac, KeyPressed is what activates buttons, not KeyReleased, so eating
KeyPressed breaks this button.

Bug: 910070
Change-Id: I4776bc3b14ac52879ad96c20d55f93126ba349d7
Reviewed-on: https://chromium-review.googlesource.com/c/1361627
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614386}
Former-commit-id: 848e9aed3705fe5ca9392b26f90caf4221c96850