chrome/browser/ui/views/passwords/manage_passwords_icon_views.h
@@ -32,7 +32,6 @@ class ManagePasswordsIconViews : public ManagePasswordsIconView,
   bool Update() override;
   void OnExecuting(PageActionIconView::ExecuteSource source) override;
   bool OnMousePressed(const ui::MouseEvent& event) override;
-  bool OnKeyPressed(const ui::KeyEvent& event) override;
   const gfx::VectorIcon& GetVectorIcon() const override;
   base::string16 GetTextForTooltipAndAccessibleName() const override;
 
